--- a/src/components/_checkout-payment.html
+++ b/src/components/_checkout-payment.html
@@ -14,20 +14,14 @@
         <form data-dev action="#" class="checkout__body">
             <div class="checkout__content">
                 <div class="checkout__steps">
-                    <div class="checkout__step tab _is-active">
-                        <span class="tab__txt text text__medium text__medium--18">
-                            1: Ваши данные
-                        </span>
+                    <div class="checkout__step tab">
+                        <span class="tab__txt text text__medium text__medium--18"> 1: <span>Ваши данные</span> </span>
+                    </div>
+                    <div class="checkout__step tab">
+                        <span class="tab__txt text text__medium text__medium--18"> 2: <span>Доставка</span> </span>
                     </div>
                     <div class="checkout__step tab _is-active">
-                        <span class="tab__txt text text__medium text__medium--18">
-                            2: Доставка
-                        </span>
-                    </div>
-                    <div class="checkout__step tab _is-active">
-                        <span class="tab__txt text text__medium text__medium--18">
-                            3: Оплата
-                        </span>
+                        <span class="tab__txt text text__medium text__medium--18"> 3: <span>Оплата</span> </span>
                     </div>
                 </div>
                 <div class="checkout__payment payment-checkout">
@@ -94,7 +88,7 @@
                         <span class="summary-checkout__total-price h h_h3"><span>41 540.20</span>₽</span>
                     </div>
                 </div>
-                <button disabled type="submit" class="summary-checkout__btn btn">
+                <button type="submit" class="summary-checkout__btn btn">
                     Далее
                 </button>
             </div>
