--- a/src/components/_consultation-home-page.html
+++ b/src/components/_consultation-home-page.html
@@ -11,42 +11,42 @@
                 <form data-dev action="#" class="consultation__info-form">
                     <div class="input text__regular-16">
                         <input
-                                id="name"
-                                data-validate
-                                data-required
-                                autocomplete="off"
-                                type="text"
-                                name="form[]"
-                                placeholder="Ваше имя"
-                                class="input__field"
+                            id="name"
+                            data-validate
+                            data-required
+                            autocomplete="off"
+                            type="text"
+                            name="form[]"
+                            placeholder="Ваше имя"
+                            class="input__field"
                         />
                         <label for="name" class="input__label" data-hint="*Заполните поле"></label>
                     </div>
 
                     <div class="input text__regular-16">
                         <input
-                                id="phone"
-                                data-tel-mask
-                                data-validate
-                                data-required
-                                autocomplete="off"
-                                type="tel"
-                                name="form[]"
-                                placeholder="Ваш телефон"
-                                class="input__field"
+                            id="phone"
+                            data-tel-mask
+                            data-validate
+                            data-required
+                            autocomplete="off"
+                            type="tel"
+                            name="form[]"
+                            placeholder="Ваш телефон"
+                            class="input__field"
                         />
                         <label for="phone" class="input__label" data-hint="*Заполните поле"></label>
                     </div>
 
                     <div class="input text__regular-16 textarea">
                         <textarea
-                                id="text-field"
-                                data-validate
-                                data-required
-                                autocomplete="off"
-                                name="form[]"
-                                placeholder="Ваш вопрос"
-                                class="input__field"
+                            id="text-field"
+                            data-validate
+                            data-required
+                            autocomplete="off"
+                            name="form[]"
+                            placeholder="Ваш вопрос"
+                            class="input__field"
                         ></textarea>
                         <label for="text-field" class="input__label" data-hint="*Заполните поле"></label>
                     </div>
@@ -58,7 +58,7 @@
             </div>
 
             <div class="consultation__poster">
-
+                <img class="consultation__poster-img" src="./assets/images/bg/1828042537.webp" alt="" />
             </div>
         </div>
     </div>
