--- a/src/components/sale.html
+++ b/src/components/sale.html
@@ -1,118 +1,145 @@
 <section class="sale">
     <div class="container">
         <div class="sale__swiper swiper">
-          <div class="sale__swiper-wrapper swiper-wrapper">
-              <div class="sale__slide swiper-slide">
-                  <div class="sale__slide-content">
-                    <div class="sale__slide-image">
-                        <img src="./assets/images/sale/bgsale.png" alt="" class="sale__slide-image-desk">
-                        <img src="" alt="" class="sale__slide-image-mob">
-                    </div>
-                      <div class="sale__slide-title h h_h1">
-                          Скидки до -15% на подарочные пакеты
-                      </div>
-                      <a href="#" class="sale__slide-btn btn white">Перейти в каталог</a>
-                  </div>
-              </div>
-              <div class="sale__slide swiper-slide">
-                <div class="sale__slide-content">
-                  <div class="sale__slide-image">
-                      <img src="./assets/images/sale/bgsale.png" alt="" class="sale__slide-image-desk">
-                      <img src="" alt="" class="sale__slide-image-mob">
-                  </div>
-                    <div class="sale__slide-title h h_h1">
-                        Скидки до -15% на подарочные пакеты
-                    </div>
-                    <a href="#" class="sale__slide-btn btn white">Перейти в каталог</a>
-                </div>
-                </div>
+            <div class="sale__swiper-wrapper swiper-wrapper">
                 <div class="sale__slide swiper-slide">
                     <div class="sale__slide-content">
-                      <div class="sale__slide-image">
-                          <img src="./assets/images/sale/bgsale.png" alt="" class="sale__slide-image-desk">
-                          <img src="" alt="" class="sale__slide-image-mob">
-                      </div>
-                        <div class="sale__slide-title h h_h1">
-                            Скидки до -15% на подарочные пакеты
+                        <div class="sale__slide-image">
+                            <img
+                                src="./assets/images/sale/bgsale.png"
+                                alt=""
+                                class="sale__slide-image-desk"
+                            />
+                            <img
+                                src="./assets/images/sale/1828042535.webp"
+                                alt=""
+                                class="sale__slide-image-mob"
+                            />
                         </div>
-                        <a href="#" class="sale__slide-btn btn white">Перейти в каталог</a>
+                        <div class="sale__slide-title h h_h1">Скидки до -15% на подарочные пакеты</div>
+                        <a href="#" class="sale__slide-btn btn btn__white">Перейти в каталог</a>
                     </div>
                 </div>
                 <div class="sale__slide swiper-slide">
                     <div class="sale__slide-content">
-                      <div class="sale__slide-image">
-                          <img src="./assets/images/sale/bgsale.png" alt="" class="sale__slide-image-desk">
-                          <img src="" alt="" class="sale__slide-image-mob">
-                      </div>
-                        <div class="sale__slide-title h h_h1">
-                            Скидки до -15% на подарочные пакеты
+                        <div class="sale__slide-image">
+                            <img
+                                src="./assets/images/sale/bgsale.png"
+                                alt=""
+                                class="sale__slide-image-desk"
+                            />
+                            <img
+                                src="./assets/images/sale/1828042535.webp"
+                                alt=""
+                                class="sale__slide-image-mob"
+                            />
                         </div>
-                        <a href="#" class="sale__slide-btn btn white">Перейти в каталог</a>
+                        <div class="sale__slide-title h h_h1">Скидки до -15% на подарочные пакеты</div>
+                        <a href="#" class="sale__slide-btn btn btn__white">Перейти в каталог</a>
                     </div>
                 </div>
-          </div>
-          <div class="sale__pagination ">
+                <div class="sale__slide swiper-slide">
+                    <div class="sale__slide-content">
+                        <div class="sale__slide-image">
+                            <img
+                                src="./assets/images/sale/bgsale.png"
+                                alt=""
+                                class="sale__slide-image-desk"
+                            />
+                            <img
+                                src="./assets/images/sale/1828042535.webp"
+                                alt=""
+                                class="sale__slide-image-mob"
+                            />
+                        </div>
+                        <div class="sale__slide-title h h_h1">Скидки до -15% на подарочные пакеты</div>
+                        <a href="#" class="sale__slide-btn btn btn__white">Перейти в каталог</a>
+                    </div>
+                </div>
+                <div class="sale__slide swiper-slide">
+                    <div class="sale__slide-content">
+                        <div class="sale__slide-image">
+                            <img
+                                src="./assets/images/sale/bgsale.png"
+                                alt=""
+                                class="sale__slide-image-desk"
+                            />
+                            <img
+                                src="./assets/images/sale/1828042535.webp"
+                                alt=""
+                                class="sale__slide-image-mob"
+                            />
+                        </div>
+                        <div class="sale__slide-title h h_h1">Скидки до -15% на подарочные пакеты</div>
+                        <a href="#" class="sale__slide-btn btn btn__white">Перейти в каталог</a>
+                    </div>
+                </div>
+            </div>
+            <div class="sale__pagination">
                 <div class="sale__pagination-bullets"></div>
-          </div>
+            </div>
         </div>
-        <div class="sale__wrapper">
-            <a href="#" class="sale-card">
-                <div class="sale-card__content">
-                    <div class="sale-card__inner">
-                        <div class="sale-card__percent">
-                            -8%
-                        </div>
-                        <div class="sale-card__date">
-                            до 13.12.2023
-                        </div>
+        <div class="sale__sale-cards swiper">
+            <div class="sale__wrapper swiper-wrapper">
+                <a href="#" class="sale-card swiper-slide">
+                    <div class="sale-card__content">
+                        <div class="sale-card__percent">-8%</div>
+                        <div class="sale-card__date">до 13.12.2023</div>
                         <div class="sale-card__text">
                             «Ваза в каждый дом» — скидки 8% на весь ассортименте
                         </div>
-                    </div>
-                    <div class="sale-card__image">
-                        <img src="./assets/images/sale/card-1.png" alt="">
-                    </div>
-                </div>
-               
-            </a>
-            <a href="#" class="sale-card">
-                <div class="sale-card__content">
-                    <div class="sale-card__inner">
-                        <div class="sale-card__percent">
-                            -15%
-                        </div>
-                        <div class="sale-card__date">
-                            до 13.12.2023
-                        </div>
-                        <div class="sale-card__text">
-                            Подарочные пакеты со скидками до -15%
+                        <div class="sale-card__image">
+                            <img src="./assets/images/sale/card-1.png" alt="" />
                         </div>
                     </div>
-                    <div class="sale-card__image">
-                        <img src="./assets/images/sale/card-2.png" alt="">
-                    </div>
-                </div>
-             
-            </a>
-            <a href="#" class="sale-card">
-                <div class="sale-card__content">
-                    <div class="sale-card__inner">
-                        <div class="sale-card__percent">
-                            -34%
-                        </div>
-                        <div class="sale-card__date">
-                            до 13.12.2023
-                        </div>
-                        <div class="sale-card__text">
-                            Тотальная распродажа новогодней коллекции 2024
+                </a>
+                <a href="#" class="sale-card swiper-slide">
+                    <div class="sale-card__content">
+                        <div class="sale-card__percent">-15%</div>
+                        <div class="sale-card__date">до 13.12.2023</div>
+                        <div class="sale-card__text">Подарочные пакеты со скидками до -15%</div>
+                        <div class="sale-card__image">
+                            <img src="./assets/images/sale/card-2.png" alt="" />
                         </div>
                     </div>
-                    <div class="sale-card__image">
-                        <img src="../assets/images/sale/card-3.png" alt="">
+                </a>
+                <a href="#" class="sale-card swiper-slide">
+                    <div class="sale-card__content">
+                        <div class="sale-card__percent">-34%</div>
+                        <div class="sale-card__date">до 13.12.2023</div>
+                        <div class="sale-card__text">Тотальная распродажа новогодней коллекции 2024</div>
+                        <div class="sale-card__image">
+                            <img src="../assets/images/sale/card-3.png" alt="" />
+                        </div>
                     </div>
-                </div>
-                
-            </a>
+                </a>
+            </div>
         </div>
+        <a href="#" class="sale__link link">
+            <span>Все акции</span>
+            <svg viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M16.9998 10.7498L2.99976 10.7498"
+                    stroke="#1D1D1B"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                />
+                <path
+                    d="M14.3745 13.375L11.7495 16"
+                    stroke="#1D1D1B"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                />
+                <path
+                    d="M17 10.75L11.75 5.5"
+                    stroke="#1D1D1B"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                />
+            </svg>
+        </a>
     </div>
 </section>
