--- a/src/components/_map.html
+++ b/src/components/_map.html
@@ -5,7 +5,7 @@
             <div class="map__content">
                 <div class="map__canvas" id="main-map"></div>
                 <div class="map__wrapper">
-                    <div class="map__card map-card" id="map-card-1">
+                    <div data-da=".map__content,768,first" class="map__card map-card" id="map-card-1">
                         <div class="map-card__wrapper">
                             <div class="map-card__header">
                                 <h6>Оптовый отдел продаж</h6>
