--- a/src/scss/sections/_consultation.scss
+++ b/src/scss/sections/_consultation.scss
@@ -1,10 +1,36 @@
 .consultation {
+    + section {
+        position: relative;
+        z-index: 5;
+    }
+
+    .input.textarea {
+        @media (max-width: 48em) {
+            margin-bottom: 0;
+            height: 22.4rem;
+        }
+    }
     &__content {
+        position: relative;
         border-radius: 6rem;
         background-color: $grey-bg;
         display: flex;
         justify-content: space-between;
         gap: 3.6rem;
+
+        @media (min-width: 48em) {
+            &::after {
+                content: '';
+                position: absolute;
+                z-index: 2;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: 30rem;
+                background-color: $white;
+                transform: translateY(100%);
+            }
+        }
 
         @include small-tablet {
             flex-direction: column-reverse;
@@ -14,6 +40,8 @@
     }
 
     &__info {
+        position: relative;
+        z-index: 2;
         padding: 5rem;
         max-width: 82.4rem;
         width: 100%;
@@ -70,15 +98,113 @@
     }
 
     &__poster {
+        position: relative;
         max-width: 82rem;
         width: 100%;
         background-color: $light-green;
         border-radius: 0 6rem 6rem 0;
+        user-select: none;
+
+        @media (min-width: 48em) {
+            &._is-animating {
+                pointer-events: none;
+            }
+
+            &[data-step='1'] {
+                &::before {
+                    transform: scale(0.88);
+                }
+                &::after {
+                    transform: scale(0.86);
+                }
+                .consultation__poster-img {
+                    transform: translateY(-9rem) rotate(-8deg);
+                }
+            }
+            &[data-step='2'] {
+                &::before {
+                    transform: scale(0.68) translateX(6rem);
+                }
+                &::after {
+                    transform: scale(0.87) translateX(-6rem) translateY(10rem);
+                }
+                .consultation__poster-img {
+                    transform: translateY(-12rem) rotate(14deg);
+                }
+            }
+            &[data-step='3'] {
+                &::before {
+                    transform: scale(0.68) translateX(9rem) translateY(10rem);
+                }
+                &::after {
+                    transform: scale(0.85) translateX(-6rem) translateY(18rem);
+                }
+                .consultation__poster-img {
+                    transform: translateY(-22rem) rotate(-3deg);
+                }
+            }
+        }
 
         @include small-tablet {
             border-radius: 4.8rem 4.8rem 0 0;
             max-width: 100%;
             height: 46rem;
+            overflow: hidden;
+        }
+
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            width: 87rem;
+            height: 87rem;
+            background-color: $white;
+            opacity: 0.2;
+            border-radius: 50%;
+            transition: transform 1s ease;
+
+            @media (max-width: 48em) {
+                width: 68rem;
+                height: 68rem;
+            }
+        }
+
+        &::before {
+            bottom: -35rem;
+            left: -11rem;
+
+            @media (max-width: 48em) {
+                bottom: -25rem;
+                left: -2rem;
+                width: 65rem;
+                height: 65rem;
+            }
+        }
+        &::after {
+            bottom: -32rem;
+            left: 2rem;
+
+            @media (max-width: 48em) {
+                bottom: -29rem;
+                left: 5rem;
+            }
+        }
+    }
+
+    &__poster-img {
+        position: absolute;
+        z-index: 2;
+        bottom: -28rem;
+        left: 18rem;
+        width: 49.4rem;
+        height: 76.2rem;
+        transition: transform 1s ease;
+        cursor: pointer;
+
+        @media (max-width: 48em) {
+            width: 42rem;
+            height: 64rem;
+            transform: translateY(-2rem);
         }
     }
 }
