--- a/src/scss/sections/_news.scss
+++ b/src/scss/sections/_news.scss
@@ -5,15 +5,20 @@
     }
 
     .link {
+        @media (max-width: 48em) {
+            margin: 0;
+            justify-content: flex-end;
+        }
+
         span {
-            @include small-tablet{
+            @include small-tablet {
                 display: none;
             }
         }
 
         svg {
-            @include small-tablet{
-                @include sizes(4.8rem, 4.8rem)
+            @include small-tablet {
+                @include sizes(4.8rem, 4.8rem);
             }
         }
     }
