--- a/src/scss/sections/_popular-card.scss
+++ b/src/scss/sections/_popular-card.scss
@@ -1,11 +1,27 @@
 .popular-card {
-    width: 53.3rem;
-    height: 59.3rem;
     border-radius: 3rem;
     background-color: $bgFon;
     padding: 3.2rem;
     display: block;
     position: relative;
+    &.swiper-slide {
+        width: auto;
+        height: auto;
+        &._mobile-only {
+            @media (min-width: 48em) {
+                display: none;
+            }
+        }
+    }
+    @media (max-width: 48em) {
+        &.swiper-slide {
+            display: grid;
+            grid-template-columns: 24rem 1fr;
+            column-gap: 2.4rem;
+            width: auto;
+            height: 30.4rem;
+        }
+    }
     &__image {
         width: 46.9rem;
         height: 43.6rem;
@@ -17,11 +33,16 @@
             object-fit: cover;
             border-radius: 2rem;
         }
-    }
-
-    &__inner {
-        display: flex;
-        justify-content: space-between;
+        @media (max-width: 48em) {
+            margin-bottom: 0;
+            width: 100%;
+            height: 24rem;
+            border-radius: 3.2rem;
+            grid-row: 1 / 3;
+            img {
+                border-radius: 3.2rem;
+            }
+        }
     }
 
     &__title {
@@ -39,6 +60,17 @@
             font-weight: 400;
             color: $grey-text;
         }
+
+        @media (max-width: 48em) {
+            &-h {
+                margin-bottom: 1.6rem;
+                font-size: 3.6rem;
+            }
+            &-t {
+                margin-bottom: 6rem;
+                font-size: 3rem;
+            }
+        }
     }
 
     &__link {
@@ -53,12 +85,26 @@
             font-weight: 500;
             line-height: 120%;
             margin-right: 0.4rem;
-            color: $fontColor;
+            color: $green;
         }
 
         svg {
             width: 2rem;
             height: 2rem;
+        }
+
+        @media (max-width: 48em) {
+            position: static;
+
+            span {
+                margin-right: 0.8rem;
+                font-size: 3rem;
+            }
+
+            svg {
+                width: 4rem;
+                height: 4rem;
+            }
         }
     }
 }
