--- a/src/scss/sections/_popular.scss
+++ b/src/scss/sections/_popular.scss
@@ -1,9 +1,24 @@
 .popular {
-
     &__title {
         display: flex;
         justify-content: space-between;
         margin-bottom: 6rem;
+
+        @media (max-width: 48em) {
+            .link {
+                margin: 0;
+                justify-content: flex-end;
+                width: auto;
+
+                span {
+                    display: none;
+                }
+
+                svg path {
+                    fill: $green;
+                }
+            }
+        }
     }
 
     &__wrapper {
@@ -11,15 +26,16 @@
         flex-wrap: wrap;
     }
 
-    .popular-card {
-        margin-right: 4rem;
-        margin-bottom: 6rem;
+    &__cards {
+        @media (min-width: 48em) {
+            &.swiper-wrapper {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                column-gap: 4rem;
+                row-gap: 6rem;
+            }
+        }
     }
-
-    .popular-card:nth-child(3n) {
-        margin-right: 0;
-    }
-
     &__btn {
         background-image: url(./assets/images/sections/popular-card/btn.png);
         background-repeat: no-repeat;
@@ -28,6 +44,10 @@
         height: 59.3rem;
         border-radius: 3rem;
         padding: 4rem;
+
+        @media (max-width: 48em) {
+            display: none;
+        }
 
         &-text {
             font-size: 1.6rem;
@@ -40,7 +60,6 @@
             width: 14.9rem;
             height: 16.6rem;
             margin-bottom: 3.2rem;
-           
         }
 
         &-image {
@@ -53,10 +72,10 @@
 
         &-circle {
             position: absolute;
-            bottom:0;
+            bottom: 0;
             z-index: 1;
             border-radius: 50%;
-            background-color:rgb(255, 255, 255);
+            background-color: rgb(255, 255, 255);
             width: 14.9rem;
             height: 14.9rem;
             opacity: 0.1;
@@ -74,7 +93,7 @@
             height: 9rem;
             display: flex;
             justify-content: center;
-            align-items:center;
+            align-items: center;
             background-color: $pink;
             border-radius: 50%;
             border: 1px solid $white;
@@ -84,6 +103,5 @@
                 height: 5rem;
             }
         }
-        
     }
 }
