--- a/src/scss/sections/_sale-card.scss
+++ b/src/scss/sections/_sale-card.scss
@@ -1,12 +1,15 @@
 .sale-card {
-    width: 53rem;
     border-radius: 2.4rem;
     background-color: $bgFon;
     overflow: hidden;
     position: relative;
+    &.swiper-slide {
+        width: 53rem;
+        height: auto;
+    }
     &:after {
         opacity: 0;
-        content: "";
+        content: '';
         position: absolute;
         z-index: 1;
         border-radius: 50%;
@@ -14,31 +17,44 @@
         top: 10rem;
         height: 2rem;
         width: 2rem;
-        transition: all 2s cubic-bezier(.25, .19, .64, 1.36);
+        transition: all 2s cubic-bezier(0.25, 0.19, 0.64, 1.36);
         background-color: $bgFon;
-       
     }
-    &:hover {
-         &:after {
-            opacity: 1;
-            background-color: #ffcc00;
-         
-          }
+    @media (any-hover: hover) {
+        &:hover {
+            &:after {
+                opacity: 1;
+                background-color: #ffcc00;
+            }
+        }
     }
-  
- 
-   
-  
+
+    @media (max-width: 48em) {
+        border-radius: 4.8rem;
+        &.swiper-slide {
+            width: 52rem;
+        }
+    }
+
     &__content {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: 1fr 23.6rem;
+        column-gap: 2rem;
         padding: 2rem;
         position: relative;
         z-index: 3;
+
+        @media (max-width: 48em) {
+            padding-top: 3.2rem;
+            grid-template-columns: 1fr;
+            justify-content: stretch;
+        }
     }
     &__image {
         width: 23.6rem;
         height: 20rem;
+        grid-row: 1 / 4;
+        grid-column: 2 / 3;
         border-radius: 1.6rem;
         img {
             width: 100%;
@@ -46,12 +62,27 @@
             object-fit: cover;
             border-radius: 1.6rem;
         }
+        @media (max-width: 48em) {
+            margin-bottom: 4rem;
+            grid-row: 3 / 4;
+            grid-column: 1 / 2;
+            width: 100%;
+            height: 38.8rem;
+            border-radius: 3.2rem;
+
+            img {
+                border-radius: 3.2rem;
+            }
+        }
     }
 
     &__inner {
-        width: 23.6rem;
         display: flex;
         flex-direction: column;
+
+        @media (min-width: 48em) {
+            width: 23.6rem;
+        }
     }
 
     &__percent {
@@ -63,11 +94,11 @@
         letter-spacing: 4%;
         position: relative;
         border-bottom: 1.5px solid rgb(43, 86, 68);
-        padding-bottom: 1rem;
+        padding-bottom: 0.4rem;
         margin-bottom: 1.2rem;
         &::before {
             position: absolute;
-            content:'';
+            content: '';
             width: 3.2rem;
             height: 3.2rem;
             background-image: url(./assets/images/sale/arrow.svg);
@@ -77,18 +108,41 @@
             top: 50%;
             transform: translate(0, -50%);
         }
+        @media (max-width: 48em) {
+            margin-bottom: 2.4rem;
+            padding-bottom: 0.8rem;
+            font-size: 4.8rem;
+            &::before {
+                top: 0;
+                width: 4.8rem;
+                height: 4.8rem;
+                transform: none;
+            }
+        }
     }
 
     &__date {
+        margin-bottom: 4rem;
         color: $grey-text;
         font-size: 1.6rem;
         font-weight: 400;
+
+        @media (max-width: 48em) {
+            font-size: 3rem;
+            grid-row: 2 / 3;
+        }
     }
 
     &__text {
-        margin-top:  auto;
+        margin-top: auto;
         font-size: 2rem;
         font-weight: 600;
         line-height: 120%;
+
+        @media (max-width: 48em) {
+            margin-top: 0;
+            font-size: 3.6rem;
+            font-weight: 500;
+        }
     }
 }
