--- a/src/scss/sections/_sale.scss
+++ b/src/scss/sections/_sale.scss
@@ -1,4 +1,17 @@
 .sale {
+    &__sale-cards {
+        @media (max-width: 48em) {
+            margin-bottom: 4.8rem;
+        }
+    }
+    &__link {
+        &.link {
+            column-gap: 3.2rem;
+        }
+        @media (min-width: 48em) {
+            display: none;
+        }
+    }
     &__slide {
         position: relative;
         &-content {
@@ -10,6 +23,23 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+
+            @media (max-width: 48em) {
+                padding-top: 10rem;
+                height: 65.4rem;
+                border-radius: 4.8rem;
+                justify-content: stretch;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: -4rem;
+                    left: 0;
+                    width: 89.4rem;
+                    height: 104.2rem;
+                    background: url('./assets/images/sale/leaves.webp') 0 0 / cover no-repeat;
+                }
+            }
         }
 
         &-image {
@@ -21,26 +51,79 @@
             left: 0;
             border-radius: 4rem;
             img {
-                object-fit: cover;
+                height: 100%;
                 border-radius: 4rem;
+                &:not(&.sale__slide-image-mob) {
+                    object-fit: cover;
+                }
+            }
+
+            @media (max-width: 48em) {
+                border-radius: 4.8rem;
+                &-mob {
+                    position: absolute;
+                    z-index: 2;
+                    bottom: -27rem;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    width: 51rem;
+                    object-fit: contain;
+                }
+                img {
+                    border-radius: 4.8rem;
+                }
+                &::after,
+                &::before {
+                    content: '';
+                    position: absolute;
+                    bottom: -47rem;
+                    left: 50%;
+                    width: 100%;
+                    height: 100%;
+                    background-color: $white;
+                    transform: translateX(-50%);
+                    border-radius: 50%;
+                    opacity: 0.2;
+                }
+
+                &::before {
+                    width: 85rem;
+                    height: 85rem;
+                }
+                &::after {
+                    bottom: -42rem;
+                    width: 71rem;
+                    height: 71rem;
+                }
             }
         }
 
         &-btn {
+            position: relative;
+            z-index: 2;
             width: fit-content;
         }
 
         &-title {
-            max-width: 68.1rem;
+            position: relative;
+            z-index: 2;
+            margin-bottom: 4.8rem;
             text-align: center;
             color: $white;
-            margin-bottom: 4.4rem;
+
+            @media (min-width: 48em) {
+                max-width: 68.1rem;
+            }
         }
     }
 
     &__swiper {
         position: relative;
         margin-bottom: 4rem;
+
+        @media (max-width: 48em) {
+            margin-bottom: 4.8rem;
+        }
     }
 
     &__pagination {
@@ -55,20 +138,31 @@
         .swiper-pagination-bullets.swiper-pagination-horizontal {
             width: fit-content;
         }
-       
-    }
 
+        .swiper-pagination-horizontal.swiper-pagination-bullets
+            .swiper-pagination-bullet.swiper-pagination-bullet-active {
+            width: 4.8rem;
+            border-radius: 1rem;
+            margin-right: 2.2rem;
+
+            @media (max-width: 48em) {
+                margin-right: 4rem;
+                width: 10rem;
+                border-radius: 20rem;
+            }
+        }
+
+        @media (max-width: 48em) {
+            bottom: 3.2rem;
+        }
+    }
 
     .swiper-slide-active {
         .sale__slide-content > * {
-          transform: translateY(0px);
-          opacity: 1;
+            transform: translateY(0px);
+            opacity: 1;
         }
-      }
-
-    
-
-
+    }
 
     .swiper-pagination-bullet {
         border-radius: 0;
@@ -79,13 +173,12 @@
         background: rgb(43, 86, 68);
         margin-right: 1.2rem;
         transition: all 0.2s;
-    }
 
-    .swiper-pagination-bullet-active {
-     
-        width: 4.8rem;
-        border-radius: 1rem;
-        margin-right: 2.2rem;
+        @media (max-width: 48em) {
+            margin-right: 1.6rem;
+            width: 1.6rem;
+            height: 1.6rem;
+        }
     }
 
     &__wrapper {
