--- a/src/scss/set.scss
+++ b/src/scss/set.scss
@@ -115,7 +115,7 @@ img {
     display: block;
     width: 100%;
     height: auto;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 @media (min-width: 1920px) {
