--- a/src/ui/styles/_label.scss
+++ b/src/ui/styles/_label.scss
@@ -1,15 +1,25 @@
 .label {
-  display: flex;
-  align-items: center;
-  column-gap: 0.8rem;
+    display: flex;
+    align-items: center;
+    column-gap: 0.8rem;
 
-  svg {
-    flex: 0 0 2.4rem;
-    width: 2.4rem;
-    height: 2.4rem;
-  }
+    @media (max-width: 48em) {
+        column-gap: 1.6rem;
+    }
 
-  &__txt {
-    color: $grey-text;
-  }
+    svg {
+        flex: 0 0 2.4rem;
+        width: 2.4rem;
+        height: 2.4rem;
+
+        @media (max-width: 48em) {
+            flex: 0 0 4.8rem;
+            width: 4.8rem;
+            height: 4.8rem;
+        }
+    }
+
+    &__txt {
+        color: $grey-text;
+    }
 }
